--- a/FinancialReportsUI/financial-reports-ui-react/src/components/IncomeStatement/IncomeStatement.css
+++ b/FinancialReportsUI/financial-reports-ui-react/src/components/IncomeStatement/IncomeStatement.css
@@ -1,8 +1,19 @@
-table, th, td {
-  border: 1px solid black;
+table {
   border-collapse: collapse;
+  width: 100%;
 }
-th, td {
-  padding: 5px;
-  text-align: left;    
+thead{
+  text-align: center;
 }
+td {
+  text-align: left;
+}
+/* th {
+  background-color: black;
+  color: white;
+} */
+tr:nth-child(even) {background-color: #f2f2f2;}
+
+/* div.incomestatement {
+  border-style: double;
+} */
