--- a/FinancialReportsUI/financial-reports-ui-react/src/components/IncomeStatement/IncomeStatement.css
+++ b/FinancialReportsUI/financial-reports-ui-react/src/components/IncomeStatement/IncomeStatement.css
@@ -14,6 +14,10 @@ td {
 } */
 tr:nth-child(even) {background-color: #f2f2f2;}
 
+.container{
+  margin: 20px;
+}
+
 /* div.incomestatement {
   border-style: double;
 } */
