--- a/FinancialReportsUI/financial-reports-ui-react/src/components/Home/Home.css
+++ b/FinancialReportsUI/financial-reports-ui-react/src/components/Home/Home.css
@@ -1,9 +1,22 @@
-.form-control{
+/* .form-control{
   text-align: center;
   align: center;
   display: inline-block;
   float: none;
 }
-.home {
+*/
+/* .home {
   justify-content: center;
+}  */
+
+/* .panels > div {
+  border: 1px solid black;
+} */
+
+.panels {
+  text-align: center;
+}
+
+.panels-financialstatments{
+  display: flex;
 }
