Updated backend to pull balance sheets for companies and updated UI with balance sheet section. Still need to input ratios in the backend and show them on the front end.

--- a/FinancialReportsUI/financial-reports-ui-react/src/components/CompanyProfile/CompanyProfile.css
+++ b/FinancialReportsUI/financial-reports-ui-react/src/components/CompanyProfile/CompanyProfile.css
@@ -1,6 +1,6 @@
 .profile {
-  height: 15%;
-  width: 50%;
+  /* height: 15%;
+  width: 50%; */
   padding: 0px;
   margin: 0px auto 0px auto;
   overflow: auto;
