--- a/FinancialReportsUI/financial-reports-ui-react/src/components/Home/Home.css
+++ b/FinancialReportsUI/financial-reports-ui-react/src/components/Home/Home.css
@@ -17,6 +17,9 @@
   text-align: center;
 }
 
-.panels-financialstatments{
+/* .panel-financialstatements{
   display: flex;
-}
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
+} */
