--- a/FinancialReportsUI/financial-reports-ui-react/src/components/CompanyProfile/CompanyProfile.css
+++ b/FinancialReportsUI/financial-reports-ui-react/src/components/CompanyProfile/CompanyProfile.css
@@ -1,9 +1,5 @@
 .profile {
-  /* height: 15%;
-  width: 50%; */
-  padding: 0px;
-  margin: 0px auto 0px auto;
   overflow: auto;
   border: 1px solid black;
+  margin: 2%;
  }
- 
