--- a/FinancialReportsUI/financial-reports-ui-react/src/components/CompetitiveAdvantageRatios/CompetitiveAdvantageRatios.css
+++ b/FinancialReportsUI/financial-reports-ui-react/src/components/CompetitiveAdvantageRatios/CompetitiveAdvantageRatios.css
@@ -3,3 +3,9 @@ thead {
   top: 0;
   background-color: white;
 }
+
+.competitiveAdvantageRatios {
+  overflow: auto;
+  border: 1px solid black;
+  margin: 2%;
+ }
