Added materialui, updated search box and search button, and added a nav bar header

--- a/FinancialReportsUI/financial-reports-ui-react/src/components/Home/Home.css
+++ b/FinancialReportsUI/financial-reports-ui-react/src/components/Home/Home.css
@@ -5,9 +5,11 @@
   float: none;
 }
 */
-/* .home {
+.companySearch {
+  display: flex;
   justify-content: center;
-}  */
+  margin: 2%;
+} 
 
 /* .panels > div {
   border: 1px solid black;
